# modsfc

./: .gitignore  README.md  pyproject.toml
examples/gl-chapter3/: Consumer.py  Government.py  Producer.py  README.md  main.py
src/modsfc/: __init__.py  actor.py  channel.py  model.py
